# LLM-MCP

./: .gitignore  Makefile  README.md  cars.db  pyproject.toml  requirements.txt
src/cars_arq/: client_c2s.py  configs.py  data_fake_c2s.py  db_c2s.py  models_c2s.py  protocol_mcp_c2s.py  server_c2s.py
src/cars_c2s_mcp.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/: test_db_filters_integration.py  test_filters.py  test_nl_parse.py  test_rtp.py
